--- a/BookingHutech/Views/Shared/_Layout.cshtml
+++ b/BookingHutech/Views/Shared/_Layout.cshtml
@@ -56,8 +56,8 @@
 
     <script src="~/script/js/jquery.min.js"></script>
     <script src="~/script/js/bootstrap.min.js"></script>
-    <script src="~/script/js/nprogress.js"></script>
-    <script src="~/script/js/date.js"></script>
+    @*<script src="~/script/js/nprogress.js"></script> load time *@ 
+    @*<script src="~/script/js/date.js"></script>*@
     <script src="~/script/js/custom.min.js"></script>
 
     <!--End Script template -->
