--- a/BookingHutech/wwwroot/views/main.html
+++ b/BookingHutech/wwwroot/views/main.html
@@ -417,4 +417,5 @@
     </div>
 </div>
 
-
+<script src="../../script/js/custom.min.js"></script>
+<script src="../../script/js/jquery.min.js"></script>
