--- a/BookingHutech/Views/Shared/_Layout.cshtml
+++ b/BookingHutech/Views/Shared/_Layout.cshtml
@@ -45,8 +45,8 @@
         <script src="~/script/js/jquery.flot.resize.js"></script>
         <script src="~/script/js/jquery.flot.orderBars.js"></script>
         <script src="~/script/js/jquery.flot.spline.min.js"></script>
-        <script src="~/script/js/curvedLines.js"></script>*@
-    @*<script src="~/script/js/date.js"></script>*@
+        <script src="~/script/js/curvedLines.js"></script>
+    <script src="~/script/js/date.js"></script>*@
     @*<script src="~/script/js/jquery.vmap.js"></script>
         <script src="~/script/js/jquery.vmap.world.js"></script>
         <script src="~/script/js/jquery.vmap.sampledata.js"></script>
