--- a/BookingHutech/wwwroot/views/common/footer/footer.html
+++ b/BookingHutech/wwwroot/views/common/footer/footer.html
@@ -4,10 +4,10 @@
         <div class="ml20">
             <div>
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
-                <span class="ml5"> Địa chỉ: 475A Dien Bien Phu, P25, Binh Thanh, Ho Chi Minh City.</span>
+                <span class="ml5">   Địa chỉ: 475A Dien Bien Phu, P25, Binh Thanh, Ho Chi Minh City.</span>
             </div>
             <div>
-                <i class="fa fa-wrench" aria-hidden="true"></i>
+                <!--<i class="fa fa-wrench" aria-hidden="true"></i>-->
                 <span> 
                     <img class="ml5" height="22" src="../../../../images/logo/logo.jpg" />
                 </span>
