--- a/BookingHutech/wwwroot/views/common/header/header.html
+++ b/BookingHutech/wwwroot/views/common/header/header.html
@@ -9,14 +9,14 @@
         </a>
         <ul class="dropdown-menu dropdown-usermenu pull-right">
             <li><a href="javascript:;"> Profile</a></li>
-            <li>
+            <!--<li>
                 <a href="javascript:;">
                     <span class="badge bg-red pull-right">50%</span>
                     <span>Settings</span>
                 </a>
             </li>
-            <li><a href="javascript:;">Help</a></li>
-            <li><a href="https://colorlib.com/polygon/gentelella/login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
+            <li><a href="javascript:;">Help</a></li>-->
+            <li><a href=""><i class="fa fa-sign-out pull-right"></i>Log Out</a></li>
         </ul>
     </li>
     <li role="presentation" class="dropdown">
