--- a/BookingHutech/wwwroot/views/main.html
+++ b/BookingHutech/wwwroot/views/main.html
@@ -51,13 +51,6 @@
                                     <li><a href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Biểu đồ khác</font></font></a></li>
                                 </ul>
                             </li>
-                            <!--<li class="">
-                                <a><i class="fa fa-clone"></i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Bố cục </font></font><span class="fa fa-chevron-down"></span></a>
-                                <ul class="nav child_menu" style="display: none;">
-                                    <li><a href="https://colorlib.com/polygon/gentelella/fixed_sidebar.html"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Thanh bên cố định</font></font></a></li>
-                                    <li><a href="https://colorlib.com/polygon/gentelella/fixed_footer.html"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Chân trang cố định</font></font></a></li>
-                                </ul>
-                            </li>--> 
                             <li class="">
                                 <a><i class="fa fa-clone"></i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Bố cục </font></font><span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu" style="display: none;">
@@ -131,7 +124,7 @@
                     <a data-toggle="tooltip" data-placement="top" title="" data-original-title="Lock">
                         <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
                     </a>
-                    <a data-toggle="tooltip" data-placement="top" title=""  data-original-title="Logout">
+                    <a data-toggle="tooltip" data-placement="top" title="" href="https://colorlib.com/polygon/gentelella/login.html" data-original-title="Logout">
                         <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
                     </a>
                 </div>
